# make_jarvis

./: .env.example  Makefile  README.md  pyproject.toml
docs/: Makefile  conf.py  index.rst  make.bat
models/: Эй-Конь_ru_mac_v3_0_0.ppn
notebooks/: llm.ipynb  stop-word.ipynb  whisper.ipynb
src/: config.py
src/agent/: agent.py  listen.py  llm.py  stt.py  tts.py
